UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Bid_Process_Steps__c.object
<CustomObject>
    <fields>
        <fullName>Internal_Approver_Duration__c</fullName>
        <description>This field used for Internal Approver Duration Calculations</description>
        <formula>DATEVALUE(Phoenix_Approval_Completed_Time__c)  -  Phoenix_Bid__r.Phoenix_Bid_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Approver Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Completed_Time_String__c</fullName>
        <label>Approval Completed Time String</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Completed_Time__c</fullName>
        <label>Approval Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Sent_Time_String__c</fullName>
        <label>Approval Sent Time String</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approval_Sent_Time__c</fullName>
        <label>Approval Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Email__c</fullName>
        <formula>Phoenix_Approver__r.Email</formula>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Team_Members__c</fullName>
        <label>Approver Team Members</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approver_Team__c</fullName>
        <label>Approver Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Phoenix_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Process Steps</relationshipLabel>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bid_Process_Steps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Criteria_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Criteria Step?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Notification_Only__c</fullName>
        <formula>Phoenix_Process_Step__r.Phoenix_Is_Notification_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Notification Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>Bid Process Steps</relationshipLabel>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Product_WAC_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product WAC Pricing</label>
        <referenceTo>New_Product_WAC_Pricing__c</referenceTo>
        <relationshipLabel>Bid Process Steps</relationshipLabel>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Override_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_PHS_Price_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PHS Price Change</label>
        <referenceTo>Phoenix_PHS_Price_Change__c</referenceTo>
        <relationshipLabel>Bid Process Steps</relationshipLabel>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Process_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Step</label>
        <referenceTo>Phoenix_Approval_Process_Step__c</referenceTo>
        <relationshipLabel>Bid Process Steps</relationshipLabel>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Do Not Bid</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Not Initiated</fullName>
                    <default>true</default>
                    <label>Not Initiated</label>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Step__c</fullName>
        <formula>Phoenix_Process_Step__r.Phoenix_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sub_Step__c</fullName>
        <label>Sub Step</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>Bid Process Steps</relationshipLabel>
        <relationshipName>Bid_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bid Process Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bid Process Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>